<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_account_parent"
    android:animationCache="false">

    <FrameLayout
        android:id="@+id/addProfileImage2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/addNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white">

            <androidx.cardview.widget.CardView
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/addProfileImage"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:alpha="1"
                    android:scaleType="centerCrop"
                    android:layout_margin="4dp"
                    android:elevation="0dp"
                    android:src="@drawable/grug" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:alpha="1"
            android:scaleType="centerCrop"
            android:layout_margin="0dp"
            android:elevation="0dp"
            android:src="@drawable/ring" />
    </FrameLayout>

    <EditText
        android:id="@+id/addNameField"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:background="@drawable/text_input"
        android:theme="@style/Theme.QRQuest"
        android:ems="10"
        android:hint="@string/exampleName"
        android:maxLength="25"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp"
        android:textColorHint="#b3b3b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:theme="@style/Theme.QRQuest"
        android:text="@string/name"
        android:textColor="#0f0f0f"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/addNameField"
        app:layout_constraintStart_toStartOf="@+id/addNameField" />

    <EditText
        android:id="@+id/addPhoneField"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/text_input"
        android:theme="@style/Theme.QRQuest"
        android:ems="10"
        android:hint="@string/examplePhone"
        android:maxLength="15"
        android:inputType="phone"
        android:paddingHorizontal="15dp"
        android:textColorHint="#b3b3b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNameField"
        android:autofillHints="" />

    <TextView
        android:id="@+id/addEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:theme="@style/Theme.QRQuest"
        android:text="@string/email"
        android:textColor="#0f0f0f"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/addEmailField"
        app:layout_constraintStart_toStartOf="@+id/addEmailField" />

    <EditText
        android:id="@+id/addEmailField"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:theme="@style/Theme.QRQuest"
        android:hint="@string/exampleEmail"
        android:maxLength="50"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:textColorHint="#b3b3b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhoneField"
        android:autofillHints="" />

    <TextView
        android:id="@+id/addPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:theme="@style/Theme.QRQuest"
        android:text="@string/phone"
        android:textColor="#0f0f0f"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/addPhoneField"
        app:layout_constraintStart_toStartOf="@+id/addPhoneField" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCreateButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#000000"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEmailField"
        app:layout_constraintVertical_bias="0.678" />


</androidx.constraintlayout.widget.ConstraintLayout>