<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.library.LibraryFragment"
    android:layout_marginBottom="?attr/actionBarSize"
    android:id="@+id/fragment_library_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/view_personal_qr_stats_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_qr_stats_button"
            android:text="@string/view_qr_code_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="25dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/qr_library_list_divider" />
        <ListView
            android:id="@+id/library_qr_codes_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:headerDividersEnabled="true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>