<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_place_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_qrcode_information"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/title_qrcode_information" />

<!--    <item-->
<!--        android:id="@+id/navigation_qrcode_library"-->
<!--        android:icon="@drawable/baseline_menu_book_24"-->
<!--        android:title="@string/title_qrcode_library" />-->

    <item
        android:id="@+id/navigation_add_qrcode"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/title_add_qrcode" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

</menu>