<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/qr_comments"
        android:icon="@drawable/baseline_forum_20"
        android:title="@string/title_qrcode_library"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/qr_feed"
        android:icon="@drawable/baseline_filter_24"
        android:title="@string/title_qrcode_library"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/qr_same_code"
        android:icon="@drawable/baseline_people_18"
        android:title="@string/title_qrcode_library"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/qr_delete"
        android:icon="@drawable/baseline_delete_20"
        android:title="@string/title_qrcode_library"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

</menu>