...
    <string name="phone">Phone</string>
    <string name="examplePhone">780–694–2000</string>
    <string name="email">Email</string>
    <string name="exampleEmail">grug@gmail.com</string>
    <string name="create">Create</string>
    <string name="about_me">About Me</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="intro_logo">Intro Logo</string>
    <string name="qr_code_name">QR Code Name</string>
    <string name="temp_generated_image">Temp generated image</string>
    <string name="qr_name">QR Name</string>
    <string name="comment">Comment</string>
...
