<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.search.SearchFragment"
    android:id="@+id/fragment_search_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <SearchView
            android:id="@+id/search_users_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:queryBackground="@android:color/transparent"
            android:background="@drawable/rounded_search"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/qr_library_list_divider" />
        <ListView
            android:id="@+id/search_users_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:headerDividersEnabled="true"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>